apps/api/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
        - name: api
          image: task-manager/api:v0.1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
              protocol: TCP
              name: http
