apps/api/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  selector:
    name: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
